# stock-agent

./: README.md  run.sh
backend/: .gitignore  README.md  pyproject.toml
backend/app/: cli.py  cli_trading.py  config.py  main.py
backend/app/api/: deps.py  routes_backtest.py  routes_dashboard.py  routes_execution.py  routes_factors.py  routes_history.py  routes_market.py  routes_marks.py  routes_memory.py  routes_orders.py  routes_picks.py  routes_reflect.py  routes_sentiment.py  routes_settings.py  routes_signals.py  routes_stock.py  routes_trade.py  routes_watchdog.py  routes_watchlist.py  schemas.py  security.py
backend/app/backtest/: engine.py  metrics.py  regime_engine.py  regime_signal.py  sim_broker.py  stoploss_engine.py
backend/app/data/: base.py  cache.py  fundamentals_edgar.py  news_factory.py  news_finnhub.py  news_yahoo.py  prices_yfinance.py  replay.py  sanitize.py
backend/app/execution/: account_state.py  base.py  futu_broker.py  order_manager.py  paper.py
backend/app/factors/: catalog.py  miner.py  proposer.py
backend/app/llm/: gemini.py
backend/app/mcp/: runtime.py  server.py  (+5 more)
backend/data/: sp500_pit_2019plus.csv
backend/scripts/: regime_experiment.py  replay_eval.py  stoploss_experiment.py  universe_experiment.py  universe_pit_experiment.py
backend/tests/: conftest.py  helpers.py  test_cli.py  test_cli_mine_factors.py  test_cli_reflect.py  test_cli_sentiment.py  test_cli_trade_cycle.py  test_cli_trading.py  test_config.py  test_memory_advisory_isolation.py  test_network_smoke.py  test_openclaw_docs.py  test_socket_guard.py
(+180 files in other folders)
