[project]
name = "stock-agent-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "pydantic-settings>=2.0",
    "pyarrow>=14.0",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "fastmcp>=2.10",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not network'"
markers = ["network: 需要联网的测试,默认跳过,用 pytest -m network 运行"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
